--- a/src/views/partials/OfertaWeb.ejs
+++ b/src/views/partials/OfertaWeb.ejs
@@ -1,20 +1,19 @@
-<div class="carousel js-carousel">
-	<div class="carousel__container js-carousel-container">
-		<div class="carousel__list js-carousel-list">
-			<div class="carousel__item js-carousel-item">1</div>
-			<div class="carousel__item js-carousel-item">2</div>
-			<div class="carousel__item js-carousel-item">3</div>
-			<div class="carousel__item js-carousel-item">4</div>
-			<div class="carousel__item js-carousel-item">5</div>
-			<div class="carousel__item js-carousel-item">6</div>
-			<div class="carousel__item js-carousel-item">7</div>
-			<div class="carousel__item js-carousel-item">8</div>
-			<div class="carousel__item js-carousel-item">9</div>
-			<div class="carousel__item js-carousel-item">10</div>
-		</div>
-	</div>
-	<div class="carousel__nav">
-		<button class="carousel__button--prev js-carousel-button" data-dir="prev">&lt;</button>
-		<button class="carousel__button--next js-carousel-button" data-dir="next">&gt;</button>
-	</div>
+<div class="WebProductsLayout">
+
+	<ol class="WebProductsListLayout">
+		<li class="WebProductsItemLayout">
+			<div class="webProductsCardsLayout">
+				<div class="webProductsCardsImage">
+					<a href="#" class="" id=""></a>
+					<img src="https://http2.mlstatic.com/D_NQ_NP_915890-MLA40195716186_122019-W.webp" alt="item">
+					</a>
+				</div>
+				<a href="/produto" class="pnome-web" title="Processador AMD Ryzen 5 5600X, Cache 35MB, 3.7GHz (4.6GHz Max Turbo)
+                "></a>
+			</div>
+
+
+		</li>
+	</ol>
+
 </div>
