--- a/public/css/main.css
+++ b/public/css/main.css
@@ -62,7 +62,7 @@ form.example button {
   padding: 10px;
   background: var(--acent-color);
   color: var(--white-color);
-  font-size: 17px;
+  font-size: 22px;
   border: 1px solid grey;
   border-left: none;
   /* Prevent double borders */
@@ -172,13 +172,13 @@ form.example::after {
   color: inherit;
 }
 
-.ctn-home-banner-web{
+.ctn-home-banner-web {
   display: none;
 }
 
 /*DEPARTAMENTO*/
 
-.deptHomeWeb{
+.deptHomeWeb {
   display: none;
 
 }
@@ -216,7 +216,7 @@ form.example::after {
   margin-bottom: 0.8rem;
 }
 
-.ctn-oferta-web{
+.ctn-oferta-web {
   display: none;
 
 }
@@ -252,6 +252,7 @@ form.example::after {
 .rsocial-icon a img {
   margin-right: 3px;
 }
+
 .usuario,
 .rsocial {
   margin-bottom: 0.5rem;
@@ -261,7 +262,7 @@ form.example::after {
 .usuario h2,
 .rsocial h2 {
   margin-bottom: 1rem;
- 
+
 }
 
 .rodape ol {
@@ -294,21 +295,25 @@ form.example::after {
 h1.nome-produto {
   font-size: 4em;
 }
-.descricao-detalhado{
+
+.descricao-detalhado {
   margin-bottom: 30px;
   margin-top: 10px;
   text-align: center;
 }
-.calculo-frete #numero-cep, #procurar-cep{
+
+.calculo-frete #numero-cep,
+#procurar-cep {
   border: 1px solid #FF4500;
   margin-bottom: 0.5em;
   padding: 10px;
   border-radius: 10px;
-  
+
 }
-#procurar-cep{
+
+#procurar-cep {
   background-color: #FF4500;
-  color:white;
+  color: white;
   font-weight: bold;
 }
 
@@ -349,7 +354,7 @@ span.preco {
   margin-bottom: 2vh;
   border-bottom: 2px solid var(--gray-color);
   margin: 1rem;
-} 
+}
 
 .separador-compra {
   margin-top: 2vh;
@@ -374,6 +379,7 @@ span.preco {
     justify-content: center;
     /* margin-left: 1em; */
   }
+
   .topnav a {
     color: var(--gray-color);
     float: left;
@@ -386,67 +392,358 @@ span.preco {
 
   .topnav a :hover:not(.active) {
     background-color: #ea834b;
-  } 
+  }
 
- .menu {
-  display: none;
-  } 
-  .home-image-mobile{
+  .menu {
     display: none;
   }
-  .ctn-home-banner-web  {
+
+  .home-image-mobile {
+    display: none;
+  }
+
+  .ctn-home-banner-web {
     display: block;
 
   }
-  .ctn-home-banner-web img{
+
+  .ctn-home-banner-web img {
     width: 100%;
     height: auto;
   }
+
   .ctn-oferta-mobile {
     display: none;
   }
 
-  .ctn-oferta-web{
+  .ctn-oferta-web {
     display: block;
   }
-/*SLider CSS*/
-.carousel{
-	padding: 0 30px;
-}
-.carousel__button--prev, .carousel__button--next{
-	position: absolute;
-	top: 0;
-	bottom: 0;
-}
-.carousel__button--prev{
-	left: 0;
-}
-.carousel__button--next{
-	right: 0;
-}
-.carousel__container {
-	overflow: hidden;
-	height: 200px;
-}
-.carousel__list{
-	position: relative;
-	display: flex;
-	flex-wrap: wrap;
-}
-.carousel__list.unwrap{
-	flex-wrap: nowrap;
-}
-.carousel__item{
-	flex: 1 0 250px;
-/* 	max-width: 300px; */
-	height: 200px;
-	background-color: #ccc;
-	text-align: center;
-	line-height: 100px;
-	border: 1px solid #fff;
-}
-/*SLider CSS END*/
 
+  /*SLider CSS*/
+  .carousel {
+    padding: 0 30px;
+  }
+
+  .carousel__button--prev,
+  .carousel__button--next {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+  }
+
+  .carousel__button--prev {
+    left: 0;
+  }
+
+  .carousel__button--next {
+    right: 0;
+  }
+
+  .carousel__container {
+    overflow: hidden;
+    height: 200px;
+  }
+
+  .carousel__list {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .carousel__list.unwrap {
+    flex-wrap: nowrap;
+  }
+
+  .carousel__item {
+    flex: 1 0 250px;
+    /* 	max-width: 300px; */
+    height: 200px;
+    background-color: #ccc;
+    text-align: center;
+    line-height: 100px;
+    border: 1px solid #fff;
+  }
+
+  /*SLider CSS END*/
+
+  /*Kabum*/
+
+  
+
+  .slick-slider {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-touch-callout: none;
+    -khtml-user-select: none;
+    touch-action: pan-y;
+    -webkit-tap-highlight-color: transparent
+  }
+
+  .slick-list,
+  .slick-slider {
+    position: relative;
+    display: block
+  }
+
+  .slick-list {
+    overflow: hidden;
+    margin: 0;
+    padding: 0
+  }
+
+  .slick-list:focus {
+    outline: none
+  }
+
+  .slick-list.dragging {
+    cursor: pointer;
+    cursor: hand
+  }
+
+  .slick-slider .slick-list,
+  .slick-slider .slick-track {
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0)
+  }
+
+  .slick-track {
+    position: relative;
+    top: 0;
+    left: 0;
+    display: block;
+    margin-left: auto;
+    margin-right: auto
+  }
+
+  .slick-track:after,
+  .slick-track:before {
+    display: table;
+    content: ""
+  }
+
+  .slick-track:after {
+    clear: both
+  }
+
+  .slick-loading .slick-track {
+    visibility: hidden
+  }
+
+  .slick-slide {
+    display: none;
+    float: left;
+    height: 100%;
+    min-height: 1px
+  }
+
+  [dir=rtl] .slick-slide {
+    float: right
+  }
+
+  .slick-slide img {
+    display: block
+  }
+
+  .slick-slide.slick-loading img {
+    display: none
+  }
+
+  .slick-slide.dragging img {
+    pointer-events: none
+  }
+
+  .slick-initialized .slick-slide {
+    display: block
+  }
+
+  .slick-loading .slick-slide {
+    visibility: hidden
+  }
+
+  .slick-vertical .slick-slide {
+    display: block;
+    height: auto;
+    border: 1px solid transparent
+  }
+
+  .slick-arrow.slick-hidden {
+    display: none
+  }
+
+  .slick-loading .slick-list {
+    background: #fff url(../images/ajax-loader.fb6f3c230cb846e25247dfaa1da94d8f.gif) 50% no-repeat
+  }
+
+  @font-face {
+    font-family: slick;
+    font-weight: 400;
+    font-style: normal;
+    src: url(../fonts/slick.a4e97f5a2a64f0ab132323fbeb33ae29.eot);
+    src: url(../fonts/slick.a4e97f5a2a64f0ab132323fbeb33ae29.eot#iefix) format("embedded-opentype"), url(../fonts/slick.295183786cd8a138986521d9f388a286.woff) format("woff"), url(../fonts/slick.c94f7671dcc99dce43e22a89f486f7c2.ttf) format("truetype"), url(../fonts/slick.2630a3e3eab21c607e21576571b95b9d.svg#slick) format("svg")
+  }
+
+  .slick-next,
+  .slick-prev {
+    font-size: 0;
+    line-height: 0;
+    position: absolute;
+    top: 50%;
+    display: block;
+    width: 20px;
+    height: 20px;
+    padding: 0;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+    cursor: pointer;
+    border: none
+  }
+
+  .slick-next,
+  .slick-next:focus,
+  .slick-next:hover,
+  .slick-prev,
+  .slick-prev:focus,
+  .slick-prev:hover {
+    color: transparent;
+    outline: none;
+    background: transparent
+  }
+
+  .slick-next:focus:before,
+  .slick-next:hover:before,
+  .slick-prev:focus:before,
+  .slick-prev:hover:before {
+    opacity: 1
+  }
+
+  .slick-next.slick-disabled:before,
+  .slick-prev.slick-disabled:before {
+    opacity: .25
+  }
+
+  .slick-next:before,
+  .slick-prev:before {
+    font-family: slick;
+    font-size: 20px;
+    line-height: 1;
+    opacity: .75;
+    color: #fff;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale
+  }
+
+  .slick-prev {
+    left: -25px
+  }
+
+  [dir=rtl] .slick-prev {
+    right: -25px;
+    left: auto
+  }
+
+  .slick-prev:before {
+    content: "←"
+  }
+
+  [dir=rtl] .slick-prev:before {
+    content: "→"
+  }
+
+  .slick-next {
+    right: -25px
+  }
+
+  [dir=rtl] .slick-next {
+    right: auto;
+    left: -25px
+  }
+
+  .slick-next:before {
+    content: "→"
+  }
+
+  [dir=rtl] .slick-next:before {
+    content: "←"
+  }
+
+  .slick-dotted.slick-slider {
+    margin-bottom: 30px
+  }
+
+  .slick-dots {
+    position: absolute;
+    bottom: -25px;
+    display: block;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    text-align: center
+  }
+
+  .slick-dots li {
+    position: relative;
+    display: inline-block;
+    margin: 0 5px;
+    padding: 0
+  }
+
+  .slick-dots li,
+  .slick-dots li button {
+    width: 20px;
+    height: 20px;
+    cursor: pointer
+  }
+
+  .slick-dots li button {
+    font-size: 0;
+    line-height: 0;
+    display: block;
+    padding: 5px;
+    color: transparent;
+    border: 0;
+    outline: none;
+    background: transparent
+  }
+
+  .slick-dots li button:focus,
+  .slick-dots li button:hover {
+    outline: none
+  }
+
+  .slick-dots li button:focus:before,
+  .slick-dots li button:hover:before {
+    opacity: 1
+  }
+
+  .slick-dots li button:before {
+    font-family: slick;
+    font-size: 6px;
+    line-height: 20px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 20px;
+    height: 20px;
+    content: "•";
+    text-align: center;
+    opacity: .25;
+    color: #000;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale
+  }
+
+  .slick-dots li.slick-active button:before {
+    opacity: .75;
+    color: #000
+  }
+/*kABUM*/
   /* hi-res laptops and desktops */
   /* .rodape {
     display: flex;
@@ -468,13 +765,14 @@ span.preco {
 }
 
 @media (min-width: 768px) {
-  
-  
+
+
   .pnome {
     font-size: 3rem;
     display: block;
     margin-bottom: 1rem;
-}
+  }
+
   .nav {
     display: block;
   }
@@ -489,10 +787,12 @@ span.preco {
   .menu li img {
     margin-bottom: -5px;
   }
-  .deptHomeWeb{
+
+  .deptHomeWeb {
     display: block;
-  
+
   }
+
   /*.pesquisa{
 	
 }*/
