--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -3,8 +3,12 @@
 <html lang="pt-BR">
   <%- include("./partials/head")%>
   <link rel="stylesheet" href="/css/main.css" />
-  <script type="text/javascript" src="/public/js/homeslider.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.7.1/slick.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.7.1/slick-theme.css" />
+  <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.7.1/slick.js"></script>
+  <script src="/public/js/homeslider.js"></script>
     
    
   <body>
@@ -18,7 +22,7 @@
     <!--bannerMobileEnd-->
     <!--bannerWeb-->
     <div class="ctn-home-banner-web">
-      <img src="images\banner_img.jpg" alt="" />
+      <img src="images\banner_img_new.jpg" alt="" />
     </div>
     <!--bannerWebEnd-->
     <!--departmentSection-->
