--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -20,7 +20,7 @@
                 </ol>
             </div>
         </div>
-        <div class = "logo">
+        <div class ="bottom-logo">
                 <img src = '/images/infodev.png' />
         </div>
     </div>
