--- a/src/views/partials/offers.ejs
+++ b/src/views/partials/offers.ejs
@@ -1,3 +1,4 @@
+
     <h2>Ofertas da Semana</h2>
     <div class="produto">
 
@@ -33,4 +34,4 @@
             <div class="pnome"><a href="/produto">Processador AMD Ryzen 5 5600X, Cache 35MB, 3.7GHz (4.6GHz Max Turbo)
                 </a></div>
         </div>
-    </div
+    </div>
