--- a/public/css/global.css
+++ b/public/css/global.css
@@ -150,8 +150,9 @@
 
   
   .rodape {
+    font-size: 2.8rem;
     margin-top: 0.60rem;
-    margin-bottom: 8rem;
+    margin-bottom: 3rem;
     display: flex;
     flex-direction: column;
     text-align: center;
