--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,27 +1,8 @@
 
 
-.searchbar input[type="text"] {
-  padding: 8.5px;
-  border: 1px solid grey;
-  float: left;
-  width: 80%;
-  font-size: 2.2rem;
-  background: var(--white-color);
-}
 
-/* Style the submit button */
-form.example button {
-  float: left;
-  width: 20%;
-  padding: 10px;
-  background: var(--acent-color);
-  color: var(--white-color);
-  font-size: 2.4rem;
-  border: 1px solid grey;
-  border-left: none;
-  /* Prevent double borders */
-  cursor: pointer;
-}
+
+
 
 form.example button:hover {
   background: var(--acent-color);
@@ -47,7 +28,8 @@ form.example::after {
 
 /* OFERTA */
 .ctn-offer {
-  font-size: 2.8rem;
+  font-size: clamp(2rem, 2.5vw, 2.8rem);
+
 }
 
 .ctn-offer>h2 {
@@ -57,7 +39,7 @@ form.example::after {
   text-align: center;
 }
 
-.produto {
+.product-item {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -253,283 +235,7 @@ span.preco {
 
   /*SLider CSS END*/
 
-  /*Kabum*/
-
-  
-
-  .slick-slider {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    -webkit-touch-callout: none;
-    -khtml-user-select: none;
-    touch-action: pan-y;
-    -webkit-tap-highlight-color: transparent
-  }
-
-  .slick-list,
-  .slick-slider {
-    position: relative;
-    display: block
-  }
-
-  .slick-list {
-    overflow: hidden;
-    margin: 0;
-    padding: 0
-  }
-
-  .slick-list:focus {
-    outline: none
-  }
-
-  .slick-list.dragging {
-    cursor: pointer;
-    cursor: hand
-  }
-
-  .slick-slider .slick-list,
-  .slick-slider .slick-track {
-    -webkit-transform: translateZ(0);
-    transform: translateZ(0)
-  }
-
-  .slick-track {
-    position: relative;
-    top: 0;
-    left: 0;
-    display: block;
-    margin-left: auto;
-    margin-right: auto
-  }
-
-  .slick-track:after,
-  .slick-track:before {
-    display: table;
-    content: ""
-  }
-
-  .slick-track:after {
-    clear: both
-  }
-
-  .slick-loading .slick-track {
-    visibility: hidden
-  }
-
-  .slick-slide {
-    display: none;
-    float: left;
-    height: 100%;
-    min-height: 1px
-  }
-
-  [dir=rtl] .slick-slide {
-    float: right
-  }
-
-  .slick-slide img {
-    display: block
-  }
-
-  .slick-slide.slick-loading img {
-    display: none
-  }
-
-  .slick-slide.dragging img {
-    pointer-events: none
-  }
-
-  .slick-initialized .slick-slide {
-    display: block
-  }
-
-  .slick-loading .slick-slide {
-    visibility: hidden
-  }
-
-  .slick-vertical .slick-slide {
-    display: block;
-    height: auto;
-    border: 1px solid transparent
-  }
-
-  .slick-arrow.slick-hidden {
-    display: none
-  }
-
-  .slick-loading .slick-list {
-    background: #fff url(../images/ajax-loader.fb6f3c230cb846e25247dfaa1da94d8f.gif) 50% no-repeat
-  }
-
-  @font-face {
-    font-family: slick;
-    font-weight: 400;
-    font-style: normal;
-    src: url(../fonts/slick.a4e97f5a2a64f0ab132323fbeb33ae29.eot);
-    src: url(../fonts/slick.a4e97f5a2a64f0ab132323fbeb33ae29.eot#iefix) format("embedded-opentype"), url(../fonts/slick.295183786cd8a138986521d9f388a286.woff) format("woff"), url(../fonts/slick.c94f7671dcc99dce43e22a89f486f7c2.ttf) format("truetype"), url(../fonts/slick.2630a3e3eab21c607e21576571b95b9d.svg#slick) format("svg")
-  }
-
-  .slick-next,
-  .slick-prev {
-    font-size: 0;
-    line-height: 0;
-    position: absolute;
-    top: 50%;
-    display: block;
-    width: 20px;
-    height: 20px;
-    padding: 0;
-    -webkit-transform: translateY(-50%);
-    transform: translateY(-50%);
-    cursor: pointer;
-    border: none
-  }
-
-  .slick-next,
-  .slick-next:focus,
-  .slick-next:hover,
-  .slick-prev,
-  .slick-prev:focus,
-  .slick-prev:hover {
-    color: transparent;
-    outline: none;
-    background: transparent
-  }
-
-  .slick-next:focus:before,
-  .slick-next:hover:before,
-  .slick-prev:focus:before,
-  .slick-prev:hover:before {
-    opacity: 1
-  }
-
-  .slick-next.slick-disabled:before,
-  .slick-prev.slick-disabled:before {
-    opacity: .25
-  }
-
-  .slick-next:before,
-  .slick-prev:before {
-    font-family: slick;
-    font-size: 20px;
-    line-height: 1;
-    opacity: .75;
-    color: #fff;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale
-  }
-
-  .slick-prev {
-    left: -25px
-  }
-
-  [dir=rtl] .slick-prev {
-    right: -25px;
-    left: auto
-  }
-
-  .slick-prev:before {
-    content: "←"
-  }
-
-  [dir=rtl] .slick-prev:before {
-    content: "→"
-  }
-
-  .slick-next {
-    right: -25px
-  }
-
-  [dir=rtl] .slick-next {
-    right: auto;
-    left: -25px
-  }
-
-  .slick-next:before {
-    content: "→"
-  }
-
-  [dir=rtl] .slick-next:before {
-    content: "←"
-  }
-
-  .slick-dotted.slick-slider {
-    margin-bottom: 30px
-  }
-
-  .slick-dots {
-    position: absolute;
-    bottom: -25px;
-    display: block;
-    width: 100%;
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    text-align: center
-  }
-
-  .slick-dots li {
-    position: relative;
-    display: inline-block;
-    margin: 0 5px;
-    padding: 0
-  }
-
-  .slick-dots li,
-  .slick-dots li button {
-    width: 20px;
-    height: 20px;
-    cursor: pointer
-  }
-
-  .slick-dots li button {
-    font-size: 0;
-    line-height: 0;
-    display: block;
-    padding: 5px;
-    color: transparent;
-    border: 0;
-    outline: none;
-    background: transparent
-  }
-
-  .slick-dots li button:focus,
-  .slick-dots li button:hover {
-    outline: none
-  }
-
-  .slick-dots li button:focus:before,
-  .slick-dots li button:hover:before {
-    opacity: 1
-  }
-
-  .slick-dots li button:before {
-    font-family: slick;
-    font-size: 6px;
-    line-height: 20px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 20px;
-    height: 20px;
-    content: "•";
-    text-align: center;
-    opacity: .25;
-    color: #000;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale
-  }
-
-  .slick-dots li.slick-active button:before {
-    opacity: .75;
-    color: #000
-  }
-/*kABUM*/
+ 
   /* hi-res laptops and desktops */
   /* .rodape {
     display: flex;
@@ -554,7 +260,8 @@ span.preco {
 
   .ctn-offer{
     position: relative; 
-    top: -325px;
+    top: -30rem;
+    margin-bottom: -28rem;
     background-color: #fff;
   }
   
@@ -565,64 +272,6 @@ span.preco {
     margin-bottom: 1rem;
   }
 
-  .nav {
-    display: block;
-  }
-
-  /* hi-res laptops and desktops */
-  .img {
-    font-size: 40px;
-    font-weight: 600;
-    color: blue;
-  }
-
-  .menu li img {
-    margin-bottom: -5px;
-  }
-
-  .deptHomeWeb {
-    display: block;
-
-  }
-
-  /*.pesquisa{
-	
-}*//*
-  .pesquisa input {
-    margin-top: 20px;
-    width: 500px;
-    height: 30px;
-    margin-left: 300px;
-  }
-
-  .pesquisa img {
-    margin-left: -35px;
-    margin-bottom: -6px;
-  }
-
-  .pesquisa ol {
-    background-color: #ea834b;
-    margin-top: 20px;
-    display: flex;
-    justify-content: space-around;
-    list-style-type: none;
-    font-weight: 600;
-    padding: 10px;
-  }*/
-
-  .rodape-principal {
-    margin-top: 0.60rem;
-    display: block;
-
-  }
-
-  .rodape {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    flex-wrap: wrap;
-    justify-content: space-around;
-
-  }
+  
 
 }
