--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,9 +1,3 @@
-
-
-
-
-
-
 form.example button:hover {
   background: var(--acent-color);
 }
@@ -53,7 +47,7 @@ form.example::after {
 }
 
 .pnome {
-  font-size: 2rem;
+  font-size: clamp(2rem, 2.5vw, 2.8rem);
   display: block;
   margin-bottom: 0.8rem;
 }
@@ -260,18 +254,26 @@ span.preco {
 
   .ctn-offer{
     position: relative; 
-    top: -30rem;
-    margin-bottom: -28rem;
+    top: -25rem;
+    margin-bottom: -25rem;
     background-color: #fff;
-  }
-  
-
-  .pnome {
-    font-size: 2.8rem;
-    display: block;
-    margin-bottom: 1rem;
+    
   }
 
-  
+  .prodcuts-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: auto;
+    grid-gap: 1rem;
+  }
+
+  .product-item {
+
+    border: 2px solid #e7e7e7;
+    border-radius: 4px;
+    padding: .5rem;
+
+  }
+ 
 
 }
