--- a/src/views/partials/offers.ejs
+++ b/src/views/partials/offers.ejs
@@ -1,5 +1,5 @@
-
     <h2>Ofertas da Semana</h2>
+    <div class="prodcuts-grid">
     <div class="product-item">
 
         <div class="desconto">
@@ -18,7 +18,6 @@
                 </a></div>
         </div>
     </div>
-    <hr>
     <div class="product-item">
         <div class="desconto">
             <span class="iconify" data-inline="false" data-icon="akar-icons:arrow-down"
@@ -35,7 +34,6 @@
                 </a></div>
         </div>
     </div>
-    <hr>
     <div class="product-item">
 
         <div class="desconto">
@@ -54,7 +52,6 @@
                 </a></div>
         </div>
     </div>
-    <hr>
     <div class="product-item">
 
         <div class="desconto">
@@ -73,3 +70,40 @@
                 </a></div>
         </div>
     </div>
+    <div class="product-item">
+
+        <div class="desconto">
+            <span class="iconify" data-inline="false" data-icon="akar-icons:arrow-down"
+                style="color: #E17055; font-size: 16px;" data-flip="horizontal"></span>
+            <span>31%</span>
+        </div>
+
+        <div class="imagem">
+            <a href="/produto">
+                <img src="/images/processador-amd.jpg" class="" alt="" title="AMD Ryzen 5 5600X"></a>
+        </div>
+        <div class="ctn-produto-preco">
+            </a>
+            <div class="pnome"><a href="/produto">Processador AMD Ryzen 5 5600X, Cache 35MB, 3.7GHz (4.6GHz Max Turbo)
+                </a></div>
+        </div>
+    </div>
+    <div class="product-item">
+
+        <div class="desconto">
+            <span class="iconify" data-inline="false" data-icon="akar-icons:arrow-down"
+                style="color: #E17055; font-size: 16px;" data-flip="horizontal"></span>
+            <span>31%</span>
+        </div>
+
+        <div class="imagem">
+            <a href="/produto">
+                <img src="/images/processador-amd.jpg" class="" alt="" title="AMD Ryzen 5 5600X"></a>
+        </div>
+        <div class="ctn-produto-preco">
+            </a>
+            <div class="pnome"><a href="/produto">Processador AMD Ryzen 5 5600X, Cache 35MB, 3.7GHz (4.6GHz Max Turbo)
+                </a></div>
+        </div>
+    </div>
+</div>
