--- a/public/css/global.css
+++ b/public/css/global.css
@@ -67,7 +67,7 @@
   
   .top-header {
     margin: 2vh 5vw;
-    font-size: 2.5rem;
+    font-size: clamp(2rem, 2.5vw, 3rem);
   }
   
   .top-icons {
@@ -87,7 +87,7 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: flex-end;
-    margin-bottom: 0.5em;
+    margin-bottom: 0.8em;
   }
   
   .topnav {
@@ -137,9 +137,6 @@
     color: inherit;
   }
   
-  .searchbar {
-    margin-top: -2rem;
-}
   .searchbar input[type="text"] {
     padding: 8.5px;
     border: 1px solid grey;
@@ -179,7 +176,7 @@ form.example button {
   .rodape {
     font-size: clamp(2rem, 2.5vw, 2.8rem);
     margin-top: 0.60rem;
-    margin-bottom: 3rem;
+    margin-bottom: 1rem;
     display: flex;
     flex-direction: column;
     text-align: center;
