--- a/src/views/partials/offers.ejs
+++ b/src/views/partials/offers.ejs
@@ -2,7 +2,7 @@
     <div class="prodcuts-grid">
     <div class="product-item">
 
-        <div class="desconto">
+        <div class="product-card">
             <span class="iconify" data-inline="false" data-icon="akar-icons:arrow-down"
                 style="color: #E17055; font-size: 16px;" data-flip="horizontal"></span>
             <span>31%</span>
@@ -19,7 +19,7 @@
         </div>
     </div>
     <div class="product-item">
-        <div class="desconto">
+        <div class="product-card">
             <span class="iconify" data-inline="false" data-icon="akar-icons:arrow-down"
                 style="color: #E17055; font-size: 16px;" data-flip="horizontal"></span>
             <span>31%</span>
@@ -36,25 +36,7 @@
     </div>
     <div class="product-item">
 
-        <div class="desconto">
-            <span class="iconify" data-inline="false" data-icon="akar-icons:arrow-down"
-                style="color: #E17055; font-size: 16px;" data-flip="horizontal"></span>
-            <span>31%</span>
-        </div>
-
-        <div class="imagem">
-            <a href="/produto">
-                <img src="/images/processador-amd.jpg" class="" alt="" title="AMD Ryzen 5 5600X"></a>
-        </div>
-        <div class="ctn-produto-preco">
-            </a>
-            <div class="pnome"><a href="/produto">Processador AMD Ryzen 5 5600X, Cache 35MB, 3.7GHz (4.6GHz Max Turbo)
-                </a></div>
-        </div>
-    </div>
-    <div class="product-item">
-
-        <div class="desconto">
+        <div class="product-card">
             <span class="iconify" data-inline="false" data-icon="akar-icons:arrow-down"
                 style="color: #E17055; font-size: 16px;" data-flip="horizontal"></span>
             <span>31%</span>
@@ -72,7 +54,7 @@
     </div>
     <div class="product-item">
 
-        <div class="desconto">
+        <div class="product-card">
             <span class="iconify" data-inline="false" data-icon="akar-icons:arrow-down"
                 style="color: #E17055; font-size: 16px;" data-flip="horizontal"></span>
             <span>31%</span>
@@ -90,7 +72,25 @@
     </div>
     <div class="product-item">
 
-        <div class="desconto">
+        <div class="product-card">
+            <span class="iconify" data-inline="false" data-icon="akar-icons:arrow-down"
+                style="color: #E17055; font-size: 16px;" data-flip="horizontal"></span>
+            <span>31%</span>
+        </div>
+
+        <div class="imagem">
+            <a href="/produto">
+                <img src="/images/processador-amd.jpg" class="" alt="" title="AMD Ryzen 5 5600X"></a>
+        </div>
+        <div class="ctn-produto-preco">
+            </a>
+            <div class="pnome"><a href="/produto">Processador AMD Ryzen 5 5600X, Cache 35MB, 3.7GHz (4.6GHz Max Turbo)
+                </a></div>
+        </div>
+    </div>
+    <div class="product-item">
+
+        <div class="product-card">
             <span class="iconify" data-inline="false" data-icon="akar-icons:arrow-down"
                 style="color: #E17055; font-size: 16px;" data-flip="horizontal"></span>
             <span>31%</span>
