--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -74,7 +74,7 @@
   
 
   <div class="searchbar">
-    <form class="example" action="action_page.php">
+    <form class="searchbar-form" action="action_page.php">
       <input
         type="text"
         placeholder="O que você está procurando?"
