--- a/src/views/partials/offers.ejs
+++ b/src/views/partials/offers.ejs
@@ -8,13 +8,13 @@
             <span>31%</span>
         </div>
 
-        <div class="imagem">
+        <div class="image">
             <a href="/produto">
                 <img src="/images/processador-amd.jpg" class="" alt="" title="AMD Ryzen 5 5600X"></a>
         </div>
-        <div class="ctn-produto-preco">
+        <div class="ctn-product-price">
             </a>
-            <div class="pnome"><a href="/produto">Processador AMD Ryzen 5 5600X, Cache 35MB, 3.7GHz (4.6GHz Max Turbo)
+            <div class="pname"><a href="/produto">Processador AMD Ryzen 5 5600X, Cache 35MB, 3.7GHz (4.6GHz Max Turbo)
                 </a></div>
         </div>
     </div>
@@ -22,16 +22,17 @@
         <div class="product-card">
             <span class="iconify" data-inline="false" data-icon="akar-icons:arrow-down"
                 style="color: #E17055; font-size: 16px;" data-flip="horizontal"></span>
-            <span>31%</span>
+            <span>20%</span>
         </div>
-        <div class="imagem">
+        <div class="image">
             <a href="/produto">
-                <img src="/images/processador-amd.jpg" class="" alt="" title="AMD Ryzen 5 5600X"></a>
+                <img src="/images/console-microsoft-xbox-series-s-500gb-branco-rrs-00006_1601067301_m.jpg" class="" alt="" title="AMD Ryzen 5 5600X"></a>
         </div>
-        <div class="ctn-produto-preco">
+        <div class="ctn-product-price">
             </a>
-            <div class="pnome"><a href="/produto">Processador AMD Ryzen 5 5600X, Cache 35MB, 3.7GHz (4.6GHz Max Turbo)
-                </a></div>
+            <div class="pname"><a href="/produto">Console Microsoft Xbox Series S, 512GB, Branco - RRS-00006
+            </a>
+        </div>
         </div>
     </div>
     <div class="product-item">
@@ -39,34 +40,16 @@
         <div class="product-card">
             <span class="iconify" data-inline="false" data-icon="akar-icons:arrow-down"
                 style="color: #E17055; font-size: 16px;" data-flip="horizontal"></span>
-            <span>31%</span>
+            <span>25%</span>
         </div>
 
-        <div class="imagem">
+        <div class="image">
             <a href="/produto">
-                <img src="/images/processador-amd.jpg" class="" alt="" title="AMD Ryzen 5 5600X"></a>
+                <img src="/images/headset-gamer-hyperx-cloud-stinger-drivers-50mm-microfone-com-cancelamento-de-ruido-rosa-hhss1x-ax-pk-g_1625150598_m.jpg" class="" alt="" title="AMD Ryzen 5 5600X"></a>
         </div>
-        <div class="ctn-produto-preco">
+        <div class="ctn-product-price">
             </a>
-            <div class="pnome"><a href="/produto">Processador AMD Ryzen 5 5600X, Cache 35MB, 3.7GHz (4.6GHz Max Turbo)
-                </a></div>
-        </div>
-    </div>
-    <div class="product-item">
-
-        <div class="product-card">
-            <span class="iconify" data-inline="false" data-icon="akar-icons:arrow-down"
-                style="color: #E17055; font-size: 16px;" data-flip="horizontal"></span>
-            <span>31%</span>
-        </div>
-
-        <div class="imagem">
-            <a href="/produto">
-                <img src="/images/processador-amd.jpg" class="" alt="" title="AMD Ryzen 5 5600X"></a>
-        </div>
-        <div class="ctn-produto-preco">
-            </a>
-            <div class="pnome"><a href="/produto">Processador AMD Ryzen 5 5600X, Cache 35MB, 3.7GHz (4.6GHz Max Turbo)
+            <div class="pname"><a href="/produto">Headset Gamer HyperX Cloud Stinger Pink, Drivers 50mm, Microfone com Cancelamento de Ruído
                 </a></div>
         </div>
     </div>
@@ -75,16 +58,16 @@
         <div class="product-card">
             <span class="iconify" data-inline="false" data-icon="akar-icons:arrow-down"
                 style="color: #E17055; font-size: 16px;" data-flip="horizontal"></span>
-            <span>31%</span>
+            <span>34%</span>
         </div>
 
-        <div class="imagem">
+        <div class="image">
             <a href="/produto">
-                <img src="/images/processador-amd.jpg" class="" alt="" title="AMD Ryzen 5 5600X"></a>
+                <img src="/images/samsung-smart-tv-55-uhd-4k-55au7700-processador-crystal-4k-tela-sem-limites-visual-livre-de-cabos-alexa-built-in-un55au7700gxzd_1617626699_m.jpg" class="" alt="" title="AMD Ryzen 5 5600X"></a>
         </div>
-        <div class="ctn-produto-preco">
+        <div class="ctn-product-price">
             </a>
-            <div class="pnome"><a href="/produto">Processador AMD Ryzen 5 5600X, Cache 35MB, 3.7GHz (4.6GHz Max Turbo)
+            <div class="pname"><a href="/produto">Samsung Smart TV 55´´ UHD 4K 55AU7700, Processador Crystal 4K, Tela sem limites
                 </a></div>
         </div>
     </div>
@@ -93,16 +76,34 @@
         <div class="product-card">
             <span class="iconify" data-inline="false" data-icon="akar-icons:arrow-down"
                 style="color: #E17055; font-size: 16px;" data-flip="horizontal"></span>
-            <span>31%</span>
+            <span>21%</span>
         </div>
 
-        <div class="imagem">
+        <div class="image">
             <a href="/produto">
-                <img src="/images/processador-amd.jpg" class="" alt="" title="AMD Ryzen 5 5600X"></a>
+                <img src="/images/monitor-gamer-led-ozone-24-5-pro-full-hd-hdmi-displayport-144hz-1ms-altura-ajustavel-ozdsp25pro_1610377706_m.jpg" class="" alt="" title="AMD Ryzen 5 5600X"></a>
         </div>
-        <div class="ctn-produto-preco">
+        <div class="ctn-product-price">
             </a>
-            <div class="pnome"><a href="/produto">Processador AMD Ryzen 5 5600X, Cache 35MB, 3.7GHz (4.6GHz Max Turbo)
+            <div class="pname"><a href="/produto">Monitor Gamer Ozone 24,5 LED, 144 Hz, Full HD, 1ms, FreeSync, HDR, HDMI/DisplayPort
+                </a></div>
+        </div>
+    </div>
+    <div class="product-item">
+
+        <div class="product-card">
+            <span class="iconify" data-inline="false" data-icon="akar-icons:arrow-down"
+                style="color: #E17055; font-size: 16px;" data-flip="horizontal"></span>
+            <span>25%</span>
+        </div>
+
+        <div class="image">
+            <a href="/produto">
+                <img src="/images/teclado-mecanico-gamer-t-dagger-bora-rgb-switch-outemu-blue-abnt2-t-tgk315-blue_1581356584_m.jpg" class="" alt="" title="AMD Ryzen 5 5600X"></a>
+        </div>
+        <div class="ctn-product-price">
+            </a>
+            <div class="pname"><a href="/produto">Teclado Mecânico Gamer T-Dagger Bora, RGB, Switch Outemu Blue
                 </a></div>
         </div>
     </div>
