--- a/src/views/carrinho.ejs
+++ b/src/views/carrinho.ejs
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
   <%- include("./partials/head")%>
-  <link rel="stylesheet" href="/css/main.css" />
+  <link rel="stylesheet" href="/css/global.css" />
+  <link rel="stylesheet" href="/css/cart.css" />
   <body>
     <!--header-->
     <%- include("./partials/header") %>
     <!--header-end-->
-    <div class="compras">
+    <div class="cart-box">
              
-        <div class="compras-meio">
+        <div class="cart-box-body">
                 <h2>
                  Seu Carrinho está Vazio
                 </h2>
-                <img src="https://m.media-amazon.com/images/G/01/cart/empty/kettle-desaturated._CB445243794_.svg">
+                <img src="\images\kettle-desaturated._CB445243794_.svg">
         </div>
     </div>
     
