--- a/src/views/categoria.ejs
+++ b/src/views/categoria.ejs
@@ -2,19 +2,16 @@
 <html lang="pt-BR">
 
   <%- include("./partials/head")%>
-  <link rel="stylesheet" href="/css/main.css" />
-  <link rel="stylesheet" href="/css/categoria.css" />
+  <link rel="stylesheet" href="/css/global.css" />
+  <link rel="stylesheet" href="/css/category.css" />
 
   <body>
     <!--header-->
     <%- include("./partials/header") %>
     <!--header-fim-->
 
-<main class="corpo">
 
-<section>
-
-    <div class = "categoria">
+    <div class = "category-box">
       <h2> Categorias </h2>
 
     </div>
@@ -33,25 +30,14 @@
 
               <section>
 
-                <div class="caixa-produtos">produto1</div>
-                  <div class="caixa-produtos">produto2</div>
-                    <div class="caixa-produtos">produto3</div>
-                      <div class="caixa-produtos">produto4</div>
-                        <div class="caixa-produtos">produto5</div>
-                          <div class="caixa-produtos">produto6</div>
+                <div class="products-box">produto1</div>
+                  <div class="products-box">produto2</div>
+                    <div class="products-box">produto3</div>
+                      <div class="products-box">produto4</div>
+                        <div class="products-box">produto5</div>
+                          <div class="products-box">produto6</div>
 
               </section>
-
-</main>
-
-      <div class="background">
-        <p>abc</p>
-      </div>
-<br>
-
-
-<br>
-
 
     <!--Footer-->
     <%- include("./partials/footer") %>
