--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -19,15 +19,14 @@
     <img src="images\banner_img_new.jpg" alt="" />
   </div>
   <!--bannerWebEnd-->
-   <!--offer-->
-   
+  <!--offer-->
+
   <div class="ctn-offer">
     <%- include("./partials/offers") %>
   </div>
   <!--offerEnd-->
-  <hr>
   <!--footer-->
-  <div class="footerHome">
+  <div class="footerBox">
     <%- include("./partials/footer") %>
   </div>
   <!--footerEnd-->
