--- a/public/css/category.css
+++ b/public/css/category.css
@@ -3,7 +3,7 @@
     align-items: center;
     }*/
 
-.categoria {
+.category-box {
     color: #ff4500;
     font-size: 18px;
     margin-left: 24px;
@@ -11,22 +11,8 @@
     text-decoration: blue underline 3px; 
 }
 
-.menu {
-    display: flex;
-    justify-content: center;
-    font-size: 14px;
-    margin-left: 24px;
-    margin-block-start: 24px ;
-    padding: 14px;
-    color: #ff4500; 
-}
 
-.menu li {
-    padding: 6px;
-    margin-right: 100px;
-}
-
-.caixa-produtos {
+.products-box {
     font-size: 12px;
     align-items: center;
     display: inline-block;
