--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 20rem 0;
+  margin: 10rem 5rem;
 }
 
 /* .login-input-label {
